# coach-ai

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.ai/prompts/: product-analyst.md  reviewer-clean-code.md  reviewer-frontend.md  reviewer-orchestrator.md  reviewer-performance.md  reviewer-security.md  security-privacy-check.md
.claude/skills/coach/: SKILL.md
.clinerules/: coach-ai.md
.continue/rules/: coach-ai.md
data/: program.json
data/programs/: active.txt  powerbuilding-4d.json
docs/: API_GUIDE.md  ARCHITECTURE.md  TELEGRAM_BOT_SETUP.md  telegram_chat_d1_workout.html  test_report_e2e_d1_workout.md  test_spec_e2e_d1_workout.md
docs/specs/: PRD-001-coach-cli.md  PRD-002-session-logger.md  PRD-003-rest-api.md  PRD-004-telegram-bot.md  PRD-005-telegram-audio-transcription.md
docs/superpowers/plans/: 2026-05-17-security-fix-pre-public.md
prompts/: SYSTEM_PROMPT.md
scripts/: start_telegram_bot.py  start_telegram_bot.sh
src/coach/: __main__.py  cli.py  constants.py  day_plan.py  logger.py  paths.py  programs.py
src/coach/api/: __main__.py  app.py  models.py  session_store.py
src/coach/llm/: __init__.py  base.py  factory.py
src/coach/telegram/: __main__.py  bot.py  formatting.py  handlers.py  (+1 more)
templates/: daily_tracking_table.md  evolution_chart.md
tests/: conftest.py  test_api.py  test_cli.py  test_e2e_d1_workout.py  test_llm_base.py  test_llm_factory.py  test_llm_providers.py  test_logger.py  test_programs.py  test_session_stores.py  test_telegram.py  test_telegram_formatting.py
(+7 files in other folders)
