[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coach-ai"
version = "0.1.0"
description = "Virtual AI coach for gym exercises and English grammar"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai    = ["openai>=1.50.0"]
ollama    = ["openai>=1.50.0"]          # uses OpenAI-compatible API
gemini    = ["google-generativeai>=0.8.0"]
all       = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
]
rest = ["fastapi>=0.110.0", "uvicorn>=0.29.0", "httpx>=0.27.0"]
telegram = ["python-telegram-bot>=21.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coach"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
